# miscellaneous

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  conanfile.txt
CMake/: CMakeRC.cmake  Conan.cmake  (+5 more)
experiments/task_systems/: CMakeLists.txt  MultiQueuedTaskSystem.cpp  MultiQueuedTaskSystem.hpp  NotificationQueue.cpp  NotificationQueue.hpp  OracleTaskSystem.cpp  OracleTaskSystem.hpp  TaskStealingTaskSystem.hpp  main.cpp
experiments/task_systems/benchmark/: benchmark.py
experiments/unordered_maps/: CMakeLists.txt  main.cpp  memory_manager.cpp  memory_manager.hpp  memory_tracking.cpp
kattis/limited_correspondence/: CMakeLists.txt  LetterAssembler.cpp  LetterAssembler.hpp  main.cpp
kattis/limited_correspondence/tests/: CMakeLists.txt  LetterAssemberTest.cpp
others/: CMakeLists.txt  convex_hull_area.cpp  reverse_bits.cpp  sea_coast.cpp
projects/cminesweeper_wrapper/: CMakeLists.txt
projects/cminesweeper_wrapper/include/: CMinesweeper.hpp
projects/codility/: CMakeLists.txt  binary_gap.cpp  max_double_slice_sum.cpp  max_profit.cpp  max_slice_sum.cpp  min_abs_sum.cpp  min_abs_sum_of_two.cpp  min_avg_two_slice.cpp  molybdenum2019.cpp  niobium2019.cpp  number_solitaire.cpp  rhodium2019.cpp  ruthenium2019.cpp  zirconium2019.cpp
projects/codility/binary_gap/include/: BinaryGap.hpp
projects/codility/binary_gap/src/: BinaryGap.cpp
projects/codility/max_double_slice_sum/include/: MaxDoubleSliceSum.hpp
projects/codility/max_double_slice_sum/src/: MaxDoubleSliceSum.cpp
projects/codility/max_profit/include/: MaxProfit.hpp
projects/codility/max_profit/src/: MaxProfit.cpp
projects/codility/max_slice_sum/include/: MaxSliceSum.hpp
projects/codility/max_slice_sum/src/: MaxSliceSum.cpp
projects/codility/min_abs_sum/include/: MinAbsSum.hpp
projects/codility/min_abs_sum/src/: MinAbsSum.cpp
projects/codility/min_abs_sum_of_two/include/: MinAbsSumOfTwo.hpp
projects/codility/min_abs_sum_of_two/src/: MinAbsSumOfTwo.cpp
projects/codility/min_avg_two_slice/include/: MinAvgTwoSlice.hpp
projects/codility/min_avg_two_slice/src/: MinAvgTwoSlice.cpp
projects/codility/molybdenum2019/include/: Molybdenum.hpp
projects/codility/molybdenum2019/src/: Molybdenum.cpp
projects/codility/niobium2019/include/: Niobium.hpp
projects/codility/niobium2019/src/: Niobium.cpp
projects/codility/number_solitaire/include/: NumberSolitaire.hpp
projects/codility/number_solitaire/src/: NumberSolitaire.cpp
projects/codility/rhodium2019/include/: Rhodium.hpp
projects/codility/rhodium2019/src/: Rhodium.cpp
projects/codility/ruthenium2019/include/: Ruthenium.hpp
projects/codility/ruthenium2019/src/: Ruthenium.cpp
projects/codility/zirconium2019/: zirconium2019.cpp
projects/codility/zirconium2019/include/: Zirconium.hpp
projects/codility/zirconium2019/src/: Zirconium.cpp
projects/color_finder/: CMakeLists.txt
projects/color_finder/include/: ColorFinder.hpp  ColorFinderConstexpr.h  Colors.hpp
projects/color_finder/src/: main.cpp
projects/entity_store/: CMakeLists.txt  README.md
projects/entity_store/include/: Entity.hpp  EntityPredicate.hpp  EntityStatesManager.hpp  EntityUtils.hpp  IStore.hpp  NestedStore.hpp  Properties.hpp  Property.hpp  RootStore.hpp  Store.hpp  StoreExceptions.hpp  Todo.hpp  TodoPredicate.hpp  TodoStatesManager.hpp  TodoUtils.hpp
projects/entity_store/src/: Entity.cpp  EntityStatesManager.cpp  EntityUtils.cpp  NestedStore.cpp  Properties.cpp  Property.cpp  RootStore.cpp  Store.cpp  StoreExceptions.cpp  Todo.cpp  TodoStatesManager.cpp  TodoUtils.cpp  main.cpp
projects/kattis/advice/: CMakeLists.txt
projects/kattis/limited_correspondence/: CMakeLists.txt
projects/komal/: CMakeLists.txt  s135.cpp
projects/matrix_connected_components/: CMakeLists.txt  README.md  TODO.md  memory_benchmark.json
projects/matrix_connected_components/include/: Algorithm.hpp  MatrixSlice.hpp
projects/matrix_connected_components/src/: Algorithm.cpp  main.cpp
projects/minesweeper/: CMakeLists.txt
projects/minesweeper/cppminesweeper/: CMakeLists.txt
projects/minesweeper/include/: Minesweeper.hpp  PropagateConstWrapper.hpp
projects/minesweeper/minesweeper_gui/: CMakeLists.txt
projects/minesweeper/minesweeper_model/: CMakeLists.txt
projects/minesweeper/src/: Minesweeper.cpp  main.cpp
projects/others/: CMakeLists.txt  convex_hull_area.cpp  reverse_bits.cpp  sea_coast.cpp
projects/utils/: CMakeLists.txt
projects/utils/src/: Assert.cpp  DisjointSets.cpp
src/kattis/advice/: CMakeLists.txt  Point.hpp
src/kattis/limited_correspondence/: CMakeLists.txt  main.cpp
task_systems/: CMakeLists.txt  MultiQueuedTaskSystem.cpp  MultiQueuedTaskSystem.h  MultiQueuedTaskSystem.hpp  NotificationQueue.cpp  NotificationQueue.h  OracleTaskSystem.cpp  OracleTaskSystem.h  TaskStealingTaskSystem.cpp  TaskStealingTaskSystem.h  TaskStealingTaskSystem.hpp  main.cpp
tests/: CMakeLists.txt
tests/catch_main/: CMakeLists.txt
tests/cminesweeper_wrapper/: CMakeLists.txt  main.cpp
tests/codility/: BinaryGapTests.cpp  CMakeLists.txt  MaxDoubleSliceSumTests.cpp  MaxProfitTests.cpp  MaxSliceSumTests.cpp  MinAbsSumOfTwoTests.cpp  MinAbsSumTests.cpp  MinAvgTwoSliceTests.cpp  MolybdenumTests.cpp  NiobiumTests.cpp  NumberSolitaireTests.cpp  RhodiumTests.cpp  RutheniumTests.cpp  ZirconiumTests.cpp
tests/color_finder/: CMakeLists.txt  ColorFinderTest.cpp
tests/entity_store/: CMakeLists.txt  EntityStoreTest.cpp
tests/kattis/: CMakeLists.txt
tests/kattis/advice/: AdviceTest.cpp  CMakeLists.txt
tests/kattis/limited_correspondence/: CMakeLists.txt  LetterAssemberTest.cpp
tests/kickstart/: CMakeLists.txt
tests/kickstart/2019/: CMakeLists.txt
tests/matrix_connected_components/: AlgorithmTests.cpp  CMakeLists.txt  MatrixSliceTests.cpp  MatrixUtils.cpp  MatrixUtils.hpp
tests/minesweeper/: CMakeLists.txt  main.cpp
tests/minesweeper/cminesweeper_wrapper/: CMakeLists.txt  main.cpp
tests/utils/: CMakeLists.txt  NotNullTests.cpp
tests/utils/containers/: CMakeLists.txt  DisjointSetTests.cpp  MatrixTests.cpp
(+128 files in other folders)
