add_executable(
  task_systems
  main.cpp
  OracleTaskSystem.hpp
  OracleTaskSystem.cpp
  MultiQueuedTaskSystem.hpp
  MultiQueuedTaskSystem.cpp
  NotificationQueue.hpp
  NotificationQueue.cpp
  TaskStealingTaskSystem.hpp
)

set_target_properties(
  task_systems
  PROPERTIES
    FOLDER
    "TaskSystems"
)
find_package(Threads)
target_link_libraries(
  task_systems
  ${CMAKE_THREAD_LIBS_INIT}
)
