add_executable(rhodium2019 rhodium2019.cpp)
target_link_libraries(rhodium2019 PRIVATE project_options project_warnings)
set_target_properties(rhodium2019 PROPERTIES FOLDER "codility")

add_executable(ruthenium2019 ruthenium2019.cpp)
target_link_libraries(ruthenium2019 PRIVATE project_options project_warnings)
set_target_properties(ruthenium2019 PROPERTIES FOLDER "codility")

add_executable(molybdenum2019 molybdenum2019.cpp)
target_link_libraries(molybdenum2019 PRIVATE project_options project_warnings)
set_target_properties(molybdenum2019 PROPERTIES FOLDER "codility")

add_executable(niobium2019 niobium2019.cpp)
target_link_libraries(niobium2019 PRIVATE project_options project_warnings)
set_target_properties(niobium2019 PROPERTIES FOLDER "codility")

add_executable(zirconium2019 zirconium2019.cpp)
target_link_libraries(zirconium2019 PRIVATE project_options project_warnings)
set_target_properties(zirconium2019 PROPERTIES FOLDER "codility")

add_executable(binary_gap binary_gap.cpp)
target_link_libraries(binary_gap PRIVATE project_options project_warnings)
set_target_properties(binary_gap PROPERTIES FOLDER "codility")

add_executable(min_abs_sum_of_two min_abs_sum_of_two.cpp)
target_link_libraries(min_abs_sum_of_two PRIVATE project_options project_warnings)
set_target_properties(min_abs_sum_of_two PROPERTIES FOLDER "codility")
